[gd_scene load_steps=7 format=3 uid="uid://cvbrsnl0eoyri"]

[ext_resource type="Script" path="res://Map/world.gd" id="1_lxfeo"]
[ext_resource type="PackedScene" uid="uid://ct2hdl3ldnehs" path="res://Map/background.tscn" id="2_qdnp1"]
[ext_resource type="PackedScene" uid="uid://csloxmwi4wrs3" path="res://Map/tile_map.tscn" id="3_hg8qw"]
[ext_resource type="PackedScene" uid="uid://clvqbp3rlfg40" path="res://Dialogue/dialogue_base.tscn" id="4_7gx6e"]
[ext_resource type="PackedScene" uid="uid://ceeprrl1l5n3w" path="res://UI/VirtuallyJoypad/virtually_joypad.tscn" id="6_0wr86"]
[ext_resource type="PackedScene" uid="uid://vka1vybjys1m" path="res://UI/Pause/pause.tscn" id="9_h6xd2"]

[node name="World" type="Node2D"]
script = ExtResource("1_lxfeo")

[node name="Background" parent="." instance=ExtResource("2_qdnp1")]
layer = -10

[node name="TileMap" parent="." instance=ExtResource("3_hg8qw")]
layer_0/tile_data = PackedInt32Array(851962, 720897, 8, 786426, 720897, 7, 720890, 720897, 6, 851961, 655361, 8, 786425, 655361, 7, 720889, 655361, 6, 851960, 655361, 8, 786424, 655361, 7, 720888, 655361, 6, 851959, 589825, 8, 786423, 589825, 7, 720887, 589825, 6, 786451, 720897, 8, 720915, 720897, 7, 655379, 720897, 6, 786450, 655361, 8, 720914, 720897, 5, 655378, 655361, 6, 786449, 655361, 8, 720913, 655361, 7, 655377, 655361, 6, 786448, 589825, 8, 720912, 589825, 7, 655376, 589825, 6, 786466, 655361, 8, 720930, 655361, 7, 655394, 655361, 6, 786465, 655361, 8, 720929, 786433, 4, 655393, 655361, 6, 786464, 655361, 8, 720928, 655361, 7, 655392, 655361, 6, 786463, 655361, 8, 720927, 655361, 7, 655391, 655361, 6, 786462, 655361, 8, 720926, 655361, 7, 655390, 655361, 6, 786461, 655361, 8, 720925, 655361, 7, 655389, 655361, 6, 786460, 655361, 8, 720924, 655361, 7, 655388, 655361, 6, 786459, 655361, 8, 720923, 720897, 4, 655387, 655361, 6, 786458, 655361, 8, 720922, 786433, 5, 655386, 655361, 6, 786468, 720897, 8, 720932, 720897, 7, 655396, 720897, 6, 786467, 655361, 8, 720931, 786433, 5, 655395, 655361, 6, 786457, 589825, 8, 720921, 589825, 7, 655385, 589825, 6, 852014, 720897, 8, 786478, 720897, 7, 720942, 720897, 6, 852013, 589825, 8, 786477, 589825, 7, 720941, 589825, 6)
layer_1/tile_data = PackedInt32Array(851992, 65537, 4, 786456, 393217, 1, 851991, 393217, 0, 786455, 196609, 0, 851990, 393217, 0, 786454, 196609, 0, 851989, 196609, 4, 786453, 393217, 1, 851988, 196609, 4, 786452, 65537, 0, 851987, 131073, 4, 786451, 196609, 0, 851986, 393217, 0, 786450, 196609, 0, 851985, 131073, 4, 786449, 196609, 0, 851984, 393217, 0, 786448, 65537, 0, 851983, 65537, 4, 786447, 196609, 0, 851982, 65537, 4, 786446, 393217, 1, 851981, 393217, 0, 786445, 131073, 0, 851980, 393217, 0, 786444, 131073, 0, 851979, 393217, 0, 786443, 196609, 0, 851978, 196609, 4, 786442, 65537, 0, 851977, 131073, 4, 786441, 65537, 0, 851976, 131073, 4, 786440, 393217, 1, 851975, 393217, 0, 786439, 393217, 1, 851974, 65537, 4, 786438, 131073, 0, 851973, 196609, 4, 786437, 65537, 0, 851972, 393217, 0, 786436, 393217, 1, 851971, 65537, 4, 786435, 196609, 0, 851970, 393217, 0, 786434, 65537, 0, 851969, 131073, 4, 786433, 196609, 0, 851968, 65537, 4, 786432, 65537, 0, 917503, 196609, 4, 851967, 131073, 0, 917502, 393217, 0, 851966, 393217, 1, 917501, 393217, 0, 851965, 65537, 0, 917500, 131073, 4, 851964, 131073, 0, 917499, 131073, 4, 851963, 393217, 1, 917498, 131073, 4, 851962, 131073, 0, 917497, 196609, 4, 851961, 131073, 0, 917496, 65537, 4, 851960, 196609, 0, 917495, 196609, 4, 851959, 393217, 1, 917494, 1, 4, 851958, 1, 0, 852015, 131073, 4, 786479, 131073, 0, 852014, 196609, 4, 786478, 393217, 1, 852013, 131073, 4, 786477, 393217, 1, 852012, 196609, 4, 786476, 65537, 0, 852011, 196609, 4, 786475, 196609, 0, 852010, 131073, 4, 786474, 131073, 0, 852009, 196609, 4, 786473, 196609, 0, 852008, 393217, 0, 786472, 131073, 0, 852007, 196609, 4, 786471, 196609, 0, 852006, 131073, 4, 786470, 196609, 0, 852005, 65537, 4, 786469, 65537, 0, 852004, 196609, 4, 786468, 196609, 0, 852003, 393217, 0, 786467, 65537, 0, 852002, 393217, 0, 786466, 393217, 1, 852001, 65537, 4, 786465, 131073, 0, 852000, 196609, 4, 786464, 131073, 0, 851999, 65537, 4, 786463, 65537, 0, 851998, 131073, 4, 786462, 65537, 0, 851997, 65537, 4, 786461, 196609, 0, 851996, 393217, 0, 786460, 65537, 0, 851995, 65537, 4, 786459, 65537, 0, 851994, 131073, 4, 786458, 196609, 0, 851993, 393217, 0, 786457, 131073, 0, 852026, 262145, 4, 786490, 655361, 1, 852025, 131073, 4, 786489, 458753, 2, 852024, 393217, 0, 786488, 196609, 0, 852023, 393217, 0, 786487, 65537, 0, 852022, 393217, 0, 786486, 65537, 0, 852021, 131073, 4, 786485, 65537, 0, 852020, 393217, 0, 786484, 65537, 0, 852019, 196609, 4, 786483, 393217, 1, 852018, 393217, 0, 786482, 393217, 1, 852017, 131073, 4, 786481, 393217, 1, 852016, 393217, 0, 786480, 196609, 0, 720954, 262145, 3, 655418, 262145, 3, 589882, 327681, 1, 524346, 327681, 1, 458810, 262145, 3, 393274, 262145, 2, 327738, 262145, 2, 262202, 262145, 3, 196666, 327681, 1, 131130, 262145, 2, 65594, 327681, 1, 58, 262145, 0, 720953, 1, 2, 655417, 1, 2, 589881, 1, 2, 524345, 458753, 1, 458809, 524289, 0, 393273, 1, 2, 327737, 1, 2, 262201, 1, 2, 196665, 1, 3, 131129, 1, 3, 65593, 1, 2, 57, 1, 0)
layer_2/tile_data = PackedInt32Array(720904, 327681, 3, 720903, 458753, 3, 720902, 524289, 3, 720901, 327681, 3, 720900, 327681, 3, 720899, 327681, 3, 720898, 327681, 3, 720897, 393217, 3, 720896, 589825, 2, 786431, 524289, 3, 786430, 327681, 3, 655371, 327681, 3, 655369, 327681, 3, 720931, 327681, 3, 720930, 524289, 3, 720929, 327681, 3, 720928, 327681, 3, 720927, 327681, 3, 720926, 327681, 3, 720925, 327681, 3, 720924, 655361, 2, 720923, 655361, 2, 720922, 589825, 3, 720921, 327681, 3, 720920, 327681, 3, 720919, 327681, 3, 720918, 589825, 3, 720917, 393217, 3, 720916, 327681, 3, 720915, 589825, 3, 720914, 458753, 3, 720913, 327681, 3, 720912, 589825, 3, 720911, 327681, 3, 720910, 327681, 3, 720909, 524289, 3, 720908, 327681, 3, 720939, 327681, 3, 720938, 589825, 2, 720937, 327681, 3, 720936, 327681, 3, 720935, 327681, 3, 720934, 524289, 2, 720933, 327681, 3, 720932, 589825, 3, 983065, 851969, 0, 983075, 851969, 0, 983079, 851969, 0, 851956, 1, 2, 917494, 262145, 4, 851958, 262145, 3, 786422, 262145, 3, 720886, 262145, 2, 655350, 327681, 1, 589814, 327681, 1, 524278, 262145, 2, 458742, 327681, 1, 393206, 262145, 3, 327670, 327681, 1, 262134, 262145, 2, 196598, 262145, 2, 131062, 262145, 3, 65526, 262145, 0, 851957, 131073, 2, 786421, 131073, 2, 720885, 65537, 2, 655349, 65537, 2, 589813, 196609, 2, 524277, 65537, 2, 458741, 65537, 2, 393205, 65537, 3, 327669, 131073, 2, 262133, 196609, 3, 196597, 131073, 3, 131061, 65537, 2, 65525, 131073, 0, 786420, 1, 3, 720884, 1, 2, 655348, 1, 2, 589812, 524289, 1, 524276, 458753, 1, 458740, 1, 2, 393204, 1, 3, 327668, 1, 3, 262132, 1, 3, 196596, 1, 2, 131060, 1, 3, 65524, 1, 0, 983032, 851969, 0, 1048573, 851969, 0, 1048577, 851969, 0, 983044, 851969, 0, 1048583, 851969, 0, 983050, 851969, 0, 1048589, 851969, 0, 983056, 851969, 0, 983041, 851969, 0, 983061, 851969, 0, 983068, 851969, 0, 983071, 851969, 0, 983083, 851969, 0, 983088, 851969, 0, 983093, 851969, 0, 983097, 851969, 0, 917561, 851969, 0)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-114, 174)

[node name="Marker2D1" type="Marker2D" parent="."]
position = Vector2(222, 163)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(428, 162)

[node name="Marker2D3" type="Marker2D" parent="."]
position = Vector2(641, 158)

[node name="Marker2D4" type="Marker2D" parent="."]
position = Vector2(847, 155)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="DialogueBase" parent="CanvasLayer" instance=ExtResource("4_7gx6e")]
visible = false
offset_top = -60.0

[node name="VirtuallyJoypad" parent="CanvasLayer" instance=ExtResource("6_0wr86")]

[node name="Pause" parent="CanvasLayer" instance=ExtResource("9_h6xd2")]
visible = false
